To announce to OMPI core testers:

- added new fields to MTT section to ini file
  - textwrap
  - drain_timeout
  - scratch (override using --scratch)

- new funclets
  - mpi_get_name, mpi_install_name, test_get_name, test_build_name,
    test_run_name, mpi_details_name
  - weekday_name, weekday_index
  - getenv
  - null
  - env_hosts
  - get_pathcc_version

- new field: mttdatabase_hostname

- See https://svn.open-mpi.org/trac/mtt/changeset/657 -- new funclets:
 * &cmd_wifexited(): Returns 1 if the last command executed exited 
   normally, 0 otherwise. 
 * &cmd_wexitstatus(): Returns the argument to exit() (or return 
   value from main()) from the last command executed. Only 
   meaningful if &cmd_wifexited() returns 1. 
 * &cmd_wifsignaled(): Returns 1 if the last command executed 
   exited via signal. 
 * &cmd_termsig(): Returns the signal number that terminated the 
   last command. Only meaningful if &cmd_wifsignaled() returns 1.

- new module(s)

 * AlreadyInstalled

   [MPI get: foo]
   ...
   installdir = /your/installation/dir
   module = AlreadyInstalled

 * Analyze::OMPI

   [MPI install: foo]
   ...
   module = Analyze::OMPI
